<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item android:title="@string/account">
        <menu>
            <item
                    android:id="@+id/navAccount"
                    android:icon="@drawable/ic_menu_account"
                    android:title="@string/account"/>

        </menu>
    </item>
    <item android:title="@string/security_system">
        <menu>
            <item
                    android:id="@+id/navSetPassword"
                    android:icon="@drawable/ic_create_password"
                    android:title="@string/set_password"/>

            <item
                    android:id="@+id/navChangePassword"
                    android:icon="@drawable/ic_change_password"
                    android:title="@string/change_password"/>

        </menu>
    </item>

</menu>
