<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">


    <cockatoo.enjizen.income.custom.view.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            app:showCloseButton="true"
    />

    <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolBar"
            android:layout_above="@id/btnSave"
            android:layout_marginBottom="@dimen/default_margin_padding_16dp"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_margin_padding_16dp"
        >

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
            >


                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewLabel"
                        style="@style/TextView.BrownGrey.Extra_ExtraSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/default_margin_padding_8dp"
                        android:textStyle="bold"
                        android:text="ธนาคาร"
                />

                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/bankSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewErrorMessage"
                        style="@style/TextView.PumpkinOrange.Extra_ExtraSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:layout_marginTop="@dimen/default_margin_padding_8dp"
                />


            </LinearLayout>


            <cockatoo.enjizen.income.custom.edittext.EditText
                    android:id="@+id/etAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/account_number"
                    android:inputType="number"
                    app:maxLength="13"
            />
            <cockatoo.enjizen.income.custom.edittext.EditText
                    android:id="@+id/etAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/account_name"
                    android:inputType="text|textNoSuggestions"
            />

            <cockatoo.enjizen.income.custom.edittext.EditText
                    android:id="@+id/etAccountBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/balance"
                    android:inputType="numberDecimal"
                    android:hint="@string/_0_00"
                    android:textAlignment="textEnd"
            />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/IncomeButton.default"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_margin_padding_44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/default_margin_padding_16dp"
            android:layout_marginStart="@dimen/default_margin_padding_32dp"
            android:layout_marginEnd="@dimen/default_margin_padding_32dp"
            android:shadowRadius="4"
            android:text="@string/save"
    />
</RelativeLayout>