<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:gravity="center_vertical"
                android:background="@drawable/bg_password"
>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="@dimen/default_margin_padding_56dp"
            android:layout_height="@dimen/default_margin_padding_56dp"
            android:layout_centerHorizontal="true"
            app:tint="@color/cinnabar"
            app:srcCompat="@drawable/ic_key_password"
    />

    <cockatoo.enjizen.income.custom.edittext.Password
            android:id="@+id/passwordPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_32dp"
            android:layout_below="@+id/imageViewIcon"

    />

    <RelativeLayout
            android:id="@+id/keyRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/passwordPin"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_margin_padding_16dp"
            android:layout_marginEnd="@dimen/default_margin_padding_16dp"
            android:layout_marginTop="@dimen/default_margin_padding_16dp">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key1"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/one"
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key2"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:layout_toEndOf="@id/key1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/two"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key3"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_toEndOf="@id/key2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/three"
        />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/keyRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/keyRow1"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_margin_padding_16dp"
            android:layout_marginEnd="@dimen/default_margin_padding_16dp"
            android:layout_marginTop="@dimen/default_margin_padding_16dp">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key4"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/flour"
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key5"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:layout_toEndOf="@id/key4"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/five"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key6"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_toEndOf="@id/key5"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/six"
        />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/keyRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/keyRow2"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_margin_padding_16dp"
            android:layout_marginEnd="@dimen/default_margin_padding_16dp"
            android:layout_marginTop="@dimen/default_margin_padding_16dp">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key7"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/seven"
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key8"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:textColor="@android:color/white"
                android:layout_toEndOf="@id/key7"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/eight"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key9"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_toEndOf="@id/key8"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/nine"
        />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/keyRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/keyRow3"
            android:gravity="center"
            android:layout_marginStart="@dimen/default_margin_padding_16dp"
            android:layout_marginEnd="@dimen/default_margin_padding_16dp"
            android:layout_marginTop="@dimen/default_margin_padding_16dp">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/keyEmpty"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/key_pin_normal"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:visibility="invisible"
                android:text=""
        />
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/key0"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@drawable/selector_key_pin"
                android:layout_marginEnd="@dimen/default_margin_padding_32dp"
                android:layout_toEndOf="@id/keyEmpty"
                android:textColor="@android:color/white"
                android:textSize="@dimen/default_text_size_24sp"
                android:text="@string/zero"
        />

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/keyDel"
                android:layout_width="@dimen/keyboard_pin"
                android:layout_height="@dimen/keyboard_pin"
                android:background="@android:color/transparent"
                android:layout_toEndOf="@id/key0"
                android:src="@drawable/selector_key_pin_delete"
                android:text=""/>

    </RelativeLayout>
</RelativeLayout>