<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.MainActivity">


    <FrameLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    />

    <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextView"
            android:elevation="6dp"
            android:padding="16dp"
            android:layout_above="@+id/bottomNavigation"
            app:menu_icon="@drawable/ic_add_white_24dp"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_colorPressed="#3cb6e3"
            app:menu_labels_customFont="@string/font_default"
            app:menu_labels_colorNormal="#aa1d1c1c"
            app:menu_labels_colorPressed="#aa1d1c1c">


        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabOutcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trending_up_white_24dp"
                app:menu_labels_textSize="16sp"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="#f9b84f"
                app:fab_label="@string/add_outcome"
                app:fab_size="normal"/>


        <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_trending_down_white_24dp"
                app:menu_labels_textSize="16sp"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="#f9b84f"
                app:fab_label="@string/add_income"
                app:fab_size="normal"/>


    </com.github.clans.fab.FloatingActionMenu>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            app:labelVisibilityMode="unlabeled"
            app:itemTextColor="@color/bottom_nav_item_color"
            app:itemIconTint="@color/bottom_nav_item_color"
            app:itemTextAppearanceActive="@style/BottomNavigationViewTextStyle"
            app:itemTextAppearanceInactive="@style/BottomNavigationViewTextStyle"
            app:menu="@menu/menu_bottom_navigation"
    />
</RelativeLayout>
